clusters/home/apps/postgresql/postgresql/configs/postgresql-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgresql-ingressroute-tcp
  namespace: postgresql
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://postgresql.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Postgresql
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: postgresql.png
    gethomepage.dev/app: postgresql # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Postgresql
    #gethomepage.dev/widget.type: "postgresql"
    #gethomepage.dev/widget.url: "https://postgresql.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - tcp
  routes:
  - match: Host(`postgresql.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: postgresql-server
      port: 5432
